# api

./: .dockerignore  .drone.yml  .editorconfig  .env.example  .env.local.secret  .env.secret  .gitignore  .golangci.yml  .travis.backup.yml  .travis.yml  Cargo.toml  Dockerfile  Makefile  README.md  api.example.yaml  api.yaml  build.rs  config.yml  config.yml.secret  docker-compose.build.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  main.go  mood.go  provider.go  server.spec.yaml  test.Dockerfile
.githooks/: pre-commit
.github/workflows/: build-test.yaml  build.yaml  push.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
about/: about.go  perms.go  service.go  static.go
about/aboutgh/: static.go
about/aboutgql/: about.go  query.go
about/aboutsvc/: service.go
assist/assistgql/: query.go
assist/assistutil/: numbers.go
assist/transit/: locate.go  models.go  opcode.go  realtime.go  service.go
auth/: permission.go  service.go
auth/airtable/: client.go  selector.go  service.go
auth/authgql/: query.go
auth/authutil/: errors.go
charts/: Makefile
charts/api/: Chart.yaml  values.yaml
cli/: app.go  util.go
cmd/: app.go  help.go
cmd/apisrv/: main.go  services.go
cmd/gcalauth/: main.go
cmd/jobserver/: main.go  provider.go
cmd/mapshistory/: main.go
cmd/server/: main.go  provider.go  services.go
cmd/spotifyauth/: main.go
cmd/transit/: main.go  services.go
config/: about.go  config.go  load.go  services.go
data/: config.go  provider.go
data/airtable/: client.go  config.go  fetch.go  mood.go  provider.go  viper.go
data/gcal/: availability.go  client.go
data/github/: about.go  client.go  gist.go  info.go  recent.go  user.go
data/mongo/: config.go  context.go  errors.go  mood.go  provider.go  viper.go
data/postgres/: config.go
data/rescuetime/: client.go  productivity.go
data/spotify/: client.go  current.go  nowplaying.go
deploy/: server.Dockerfile
deployment/: .gitignore  configmap.yml  configmap.yml.secret  deploy.yml  ingress.yml  jobs-ui.configmap.yml  jobs-ui.deploy.yml  jobs-ui.service.yml  jobs.deploy.yml  secret.yml  secret.yml.secret  service.yml  varnish.configmap.yml  varnish.deploy.yml  varnish.ingress.yml  varnish.service.yml
deployment/charts/: README.md
git/: commit.go  models.go  service.go
git/gitgh/: source.go
git/gitgql/: query.go
git/gitsvc/: precacher.go  service.go
graphql/: exec_gen.go  generate.go  gqlgen.yaml
internal/: info.go
jobserver/: mood.go  server.go  viper.go
location/: models.go  perms.go  segment.go  service.go
music/: control.go  current.go  models.go  perms.go  service.go  source.go
processing/: config.go  mood.go  server.go
productivity/: category.go  models.go  service.go
scheduling/: period.go  perms.go  service.go  timespan.go
scripts/: deploy.sh  tools.sh
server/: config.go  middleware.go  option.go  pkg.go  routes.go  server.go  shutdown.go  start.go  viper.go
src/: build.rs  db.rs  env.rs  graph.rs  grocery.rs  lib.rs  main.rs  meta.rs  models.rs  prelude.rs  routes.rs  status.rs
stream/: commits.go  location.go  music.go  nowplaying.go  poll.go
work/: mood.go
(+345 files in other folders)
