# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "api"
version = "0.1.0"
authors = ["Steven Xie <dev@stevenxie.me>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
chrono_tz = { package = "chrono-tz", version = "0.5" }
chrono_humanize = { package = "chrono-humanize", version = "0.1" }
diesel = { version = "1.4", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15"
errors = { package = "thiserror", version = "1.0" }
futures = "0.3"
graphql = { package = "async-graphql", version = "2.0" }
graphql_warp = { package = "async-graphql-warp", version = "2.0" }
log = "0.4"
logger = { package = "pretty_env_logger", version = "0.4.0" }
regex = "1.4.2"
sentry = "0.20"
serde = "1.0"
tokio = { version = "0.2", features = ["full"] }
uuid = "0.8"
warp = "0.2"
http = "0.2.1"
lazy_static = "1.4.0"


[build-dependencies]
anyhow = "1.0"
chrono = "0.4"
git = { package = "git2", version = "0.13" }
semver = "0.11.0"

[build-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-for-all",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
]
