[package]
name = "api"
version = "4.0.0"
authors = ["Steven Xie <dev@stevenxie.me>"]
edition = "2018"
default-run = "api"


[dependencies]
anyhow = "1.0"
async_trait = { package = "async-trait", version = "0.1" }
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono_tz = { package = "chrono-tz", version = "0.5" }
chrono_humanize = { package = "chrono-humanize", version = "0.1" }
clap = { version = "3.0.0-beta.2", features = ["color"] }
derive_builder = "0.9.0"
diesel = { version = "1.4", features = ["postgres", "r2d2", "serde_json"] }
dotenv = "0.15"
errors = { package = "thiserror", version = "1.0" }
futures = "0.3"
graphql_warp = { package = "async-graphql-warp", version = "2.0" }
http = "0.2"
json = { package = "serde_json", version = "1.0" }
json_dotpath = "1.0"
lazy_static = "1.4"
log = "0.4"
logger = { package = "pretty_env_logger", version = "0.4.0" }
regex = "1.4"
serde = "1.0"
tokio = { version = "0.3", features = ["rt", "rt-multi-thread", "time", "macros"] }
tokio_compat = { package = "tokio-compat-02", version = "0.1" }
uuid = "0.8"
warp = "0.2"

[dependencies.sentry]
version = "0.20"
default-features = false
features = [
  "anyhow",
  "backtrace",
  "contexts",
  "log",
  "env_logger",
  "panic",
  "transport",
]

[dependencies.request]
package = "reqwest"
version = "0.10.8"
features = ["json", "cookies"]

[dependencies.graphql]
package = "async-graphql"
version = "2.1"
default-features = false
features = ["log", "url", "uuid", "chrono", "chrono-tz"]


[build-dependencies]
anyhow = "1.0"
chrono = "0.4"
git = { package = "git2", version = "0.13" }
semver = "0.11.0"

[build-dependencies.cargo-husky]
version = "1"
default-features = false
features = [
  "precommit-hook",
  "run-for-all",
  "run-cargo-check",
  "run-cargo-clippy",
  "run-cargo-fmt",
]
